adjust padding for menu

--- a/front.html
+++ b/front.html
@@ -7,46 +7,54 @@
 </head>
 
 <body>
-<div class="container">
-<div class="row clearfix">
-<div class="column full">
-<div class="head">
-<div class="prof">&nbsp;</div>
-<div class="title">
-<h2 class="course_name">ABC 1000: Course Name</h2>
-<h4 class="course_sub">Instructor: Naranjo</h4>
-<ul class="nav">
-<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
-<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
-<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
-<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
-<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="row clearfix">&nbsp;</div>
-<div class="row clearfix">
-<div class="column one-fourth">
-<div class="button m0">
-<div class="grow"><a href="/courses/290915/pages/imba-home-page/www.google.com">Start Here</a></div>
-</div>
-</div>
-<div class="column one-fourth">
-<div class="button m0">
-<div class="grow"><a href="/courses/290915/pages/imba-home-page/www.google.com">Start Here</a></div>
-</div>
-</div>
-<div class="column one-fourth">
-<div class="button m0">
-<div class="grow"><a href="/courses/290915/pages/imba-home-page/www.google.com">Start Here</a></div>
-</div>
-</div>
-<div class="column one-fourth">
-<div class="button m0">
-<div class="grow"><a href="/courses/290915/pages/imba-home-page/www.google.com">Start Here</a></div>
-</div>
-</div>
-</div>
-</div></body>
+	<div class="container">
+		<div class="row clearfix">
+			<div class="column full">
+				<div class="head">
+					<div class="prof">&nbsp;</div>
+					<div class="title">
+						<h2 class="course_name">ABC 1000: Course Name</h2>
+						<h4 class="course_sub">Instructor: Naranjo</h4>
+						<ul class="nav">
+							<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
+							<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
+							<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
+							<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
+							<li><a href="/courses/290915/pages/imba-home-page/google.com">Link</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row clearfix">
+			<div class="column one-fourth">
+				<div class="button m0">
+					<div class="grow">
+						<a href="/courses/290915/pages/imba-home-page/www.google.com">Start Here</a>
+					</div>
+				</div>
+			</div>	
+			<div class="column one-fourth">
+				<div class="button m0">
+					<div class="grow">
+						<a href="/courses/290915/pages/imba-home-page/www.google.com">Start Here</a>
+					</div>
+				</div>
+			</div>
+			<div class="column one-fourth">
+				<div class="button m0">
+					<div class="grow">
+						<a href="/courses/290915/pages/imba-home-page/www.google.com">Start Here</a>
+					</div>
+				</div>
+			</div>
+			<div class="column one-fourth">
+				<div class="button m0">
+					<div class="grow">
+						<a href="/courses/290915/pages/imba-home-page/www.google.com">Start Here</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
