file paths to css

--- a/front.html
+++ b/front.html
@@ -1,12 +1,13 @@
 <head>
-<link rel="stylesheet" type="text/css" href="_css/imba-v1.css">
+<link rel="stylesheet" type="text/css" href="css/imba-v1.css">
 <link rel="stylesheet" type="text/css" href="../canvas-lms/doc/api/fulldoc/html/css/common.css">
-<link rel="stylesheet" type="text/css" href="_css/inline-icons.css">
-<link rel="stylesheet" type="text/css" href="_css/header-icons.css">
-<link rel="stylesheet" type="text/css" href="_css/front-default.css">
+<link rel="stylesheet" type="text/css" href="css/inline-icons.css">
+<link rel="stylesheet" type="text/css" href="css/header-icons.css">
+<link rel="stylesheet" type="text/css" href="css/front-default.css">
 </head>
 
-<body>
+<body class="context-course_290915">
+	<div id="wiki_page_show">
 	<div class="container">
 		<div class="row clearfix">
 			<div class="column full">
